--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "tailwindcss -i src/style.css -o public/style.css --watch"
-
   },
   "author": "",
   "license": "MIT",
@@ -15,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.25.1",
     "connect-mongo": "^3.2.0",
+    "daisyui": "^2.50.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
