--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nodemon": "^2.0.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "watch": "^0.13.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
