--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "binary-upload-boom",
+  "name": "Trailblazers",
   "version": "1.0.0",
   "description": "100Devs Social Network",
   "main": "server.js",
