--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Trailblazers",
   "version": "1.0.0",
-  "description": "100Devs Social Network",
+  "description": "Climbing, hiking and social media website",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
