--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "build-css": "tailwindcss -i src/style.css -o public/style.css --watch"
   },
   "author": "",
@@ -21,14 +21,17 @@
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
+    "jest": "^29.7.0",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.5",
+    "mongodb-memory-server": "^8.15.1",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "supertest": "^6.3.3",
     "validator": "^13.6.0",
     "watch": "^0.13.0"
   },
